overflow fixed

--- a/app/assets/stylesheets/lina/application.css.scss
+++ b/app/assets/stylesheets/lina/application.css.scss
@@ -2,10 +2,29 @@
 @import 'bootstrap';
 @import 'abn_tree.css';
 
-.more-info {
-  white-space: pre;
+html, body {
+  height: 100%;
 }
 
-.api-contents {
-  padding-top: 10px;
+.apidoc-page {
+  height: 100%;
+  margin-right: 0;
+  margin-left: 0;
+
+  .more-info {
+    white-space: pre;
+  }
+
+  .api-left-tree {
+    height: 100%;
+    overflow-y: auto;
+    background: #FAFAFA;
+    border-right: 1px solid #eee;
+  }
+
+  .api-contents {
+    padding-top: 10px;
+    height: 100%;
+    overflow-y: auto;
+  }
 }
